-- Consolidated Database Schema for Zaip AI (Open Source)
-- Includes tables: zaip_contacts, zaip_conversations, zaip_messages, log_*

-- 1. zaip_contacts
create table public.zaip_contacts (
  _id_contact bigint generated by default as identity not null,
  date_created timestamp with time zone null default now(),
  date_updated timestamp with time zone null,
  name text null,
  email text null,
  phone_complete text null,
  ddd text null,
  ddi text null,
  status text null default 'ativo'::text,
  phone text null,
  gender text null,
  date_birthday date null,
  step_process_contact text null default '1 - Contato Ativo'::text,
  company_name text null,
  company_area text null,
  constraint zaip_contacts_pkey primary key (_id_contact)
) TABLESPACE pg_default;

-- 2. zaip_conversations
create table public.zaip_conversations (
  _id_conversation bigint generated by default as identity not null,
  _id_contact bigint null,
  date_created timestamp with time zone null default now(),
  date_updated timestamp with time zone null,
  status text null default 'ativo'::text,
  last_question text null,
  last_response text null,
  step_process text null default '1 - Atendimento Iniciado'::text,
  openai_conversation_id text null,
  current_step bigint null default '1'::bigint,
  state_process jsonb null,
  script_name_last_used text null,
  constraint zaip_conversations_pkey primary key (_id_conversation),
  constraint zaip_conversations__id_contact_fkey foreign KEY (_id_contact) references zaip_contacts (_id_contact) on update CASCADE on delete set null
) TABLESPACE pg_default;

create index IF not exists zaip_conversations__id_contact_date_created_idx on public.zaip_conversations using btree (_id_contact, date_created desc) TABLESPACE pg_default;

-- 3. zaip_messages
create table public.zaip_messages (
  _id_message bigint generated by default as identity not null,
  date_time timestamp with time zone null default now(),
  _id_group_message bigint null,
  _id_conversation bigint null,
  _id_contact bigint null,
  type text null,
  message text null,
  ai_gpt_model text null,
  ai_audio_model text null,
  ai_audio_response text null,
  tokens_total_used bigint null,
  tokens_input_used bigint null,
  tokens_output_used bigint null,
  tokens_cached_used bigint null,
  tokens_reasoning_used bigint null,
  constraint zaip_messages_pkey primary key (_id_message),
  constraint zaip_messages__id_contact_fkey foreign KEY (_id_contact) references zaip_contacts (_id_contact) on update CASCADE on delete set null,
  constraint zaip_messages__id_conversation_fkey foreign KEY (_id_conversation) references zaip_conversations (_id_conversation) on update CASCADE on delete set null
) TABLESPACE pg_default;

create index IF not exists idx_messages_contact_today on public.zaip_messages using btree (_id_conversation, date_time) TABLESPACE pg_default
where (type = 'Enviado pelo Contato'::text);

create index IF not exists idx_messages_conversation on public.zaip_messages using btree (_id_conversation) TABLESPACE pg_default;

create index IF not exists idx_messages_conv_date_desc on public.zaip_messages using btree (_id_conversation, date_time desc) TABLESPACE pg_default;

-- 4. log_conversations_steps
create table public.log_conversations_steps (
  _id_log_conversations bigint generated by default as identity not null,
  date_created timestamp with time zone not null default now(),
  _id_conversation bigint null,
  _id_group_message text null,
  _id_contact bigint null,
  step_process text null,
  current_step bigint null,
  state_process text null,
  script_name_last_used text null,
  input text null,
  output text null,
  reason text null,
  constraint log_conversations_steps_pkey primary key (_id_log_conversations),
  constraint log_conversations_steps__id_contact_fkey foreign KEY (_id_contact) references zaip_contacts (_id_contact) on update CASCADE on delete set null,
  constraint log_conversations_steps__id_conversation_fkey foreign KEY (_id_conversation) references zaip_conversations (_id_conversation)
) TABLESPACE pg_default;

-- 5. log_meta_whebhook
create table public.log_meta_whebhook (
  _id_log_meta_whebhook bigint generated by default as identity not null,
  date_created timestamp with time zone not null default now(),
  json jsonb null,
  type text null,
  wa_id text null,
  phone_number_id text null,
  business_id text null,
  phone_number text null,
  message text null,
  "from" text null,
  message_template_id text null,
  constraint log_meta_whebhook_pkey primary key (_id_log_meta_whebhook)
) TABLESPACE pg_default;

-- 6. log_openai_requests
create table public.log_openai_requests (
  _id_log_openai_requests bigint generated by default as identity not null,
  date_created timestamp with time zone not null default now(),
  type text null,
  json jsonb null,
  _id_contact bigint null,
  _id_conversation bigint null,
  tokens_total_used bigint null,
  tokens_input_used bigint null,
  tokens_output_used bigint null,
  tokens_cached_used bigint null,
  tokens_reasoning_used bigint null,
  usage_type text null,
  ai_model text null,
  tokens_audio_used bigint null,
  constraint log_openai_requests_pkey primary key (_id_log_openai_requests)
) TABLESPACE pg_default;

-- 7. log_results
create table public.log_results (
  _id_log_results bigint generated by default as identity not null,
  date_created timestamp with time zone not null default now(),
  type text null,
  json jsonb null,
  _id_contact bigint null,
  _id_conversation bigint null,
  _id_group_message text null,
  status text null,
  input text null,
  output text null,
  reason text null,
  slots text null,
  script_name_last_used text null,
  constraint log_results_pkey primary key (_id_log_results)
) TABLESPACE pg_default;

-- 8. log_mcp
create table public.log_mcp (
  _id_log_mcp bigint generated by default as identity not null,
  date_created timestamp with time zone not null default now(),
  json jsonb null,
  type text null,
  constraint log_mcp_pkey primary key (_id_log_mcp)
) TABLESPACE pg_default;

-- SECURITY: RLS POLICIES
-- Enable RLS on all tables to block public API access by default.
-- Access is restricted to Service Role (Backend) and Database Admins.

ALTER TABLE public.zaip_contacts ENABLE ROW LEVEL SECURITY;
ALTER TABLE public.zaip_conversations ENABLE ROW LEVEL SECURITY;
ALTER TABLE public.zaip_messages ENABLE ROW LEVEL SECURITY;
ALTER TABLE public.log_conversations_steps ENABLE ROW LEVEL SECURITY;
ALTER TABLE public.log_meta_whebhook ENABLE ROW LEVEL SECURITY;
ALTER TABLE public.log_openai_requests ENABLE ROW LEVEL SECURITY;
ALTER TABLE public.log_results ENABLE ROW LEVEL SECURITY;
ALTER TABLE public.log_mcp ENABLE ROW LEVEL SECURITY;

-- Habilitar extensão de vetores
CREATE EXTENSION IF NOT EXISTS vector WITH SCHEMA extensions;

-- VECTOR DATABASE FOR RAG
-- Create the vector table
CREATE TABLE IF NOT EXISTS public.zz_vector (
  id           BIGSERIAL PRIMARY KEY,
  date_created TIMESTAMPTZ DEFAULT NOW(),
  content      TEXT,
  metadata     JSONB,
  embedding    vector(1536) -- pode ser minúsculo, é o tipo da extensão
);

-- Enable RLS on the vector table
ALTER TABLE public.zz_vector
  ENABLE ROW LEVEL SECURITY;

-- Create permissive RLS policy
-- Create restrictive RLS policy (Service Role only)
CREATE POLICY zz_vector_service_role
  ON public.zz_vector
  TO service_role
  USING (true)
  WITH CHECK (true);

-- Create function using extensions.cosine_distance instead of the operator <=>
CREATE OR REPLACE FUNCTION match_d(
  query_embedding vector(1536),
  match_count     INT     DEFAULT 10,
  filter          JSONB   DEFAULT '{}'
)
RETURNS TABLE (
  id         BIGINT,
  content    TEXT,
  metadata   JSONB,
  similarity FLOAT
)
LANGUAGE plpgsql
STABLE
PARALLEL SAFE
SET search_path = extensions, public
AS $func$
BEGIN
  RETURN QUERY
    SELECT
      d.id,
      d.content,
      d.metadata,
      1 - extensions.cosine_distance(d.embedding, query_embedding) AS similarity
    FROM public.zz_vector AS d
    WHERE d.metadata @> filter
    ORDER BY extensions.cosine_distance(d.embedding, query_embedding)
    LIMIT match_count;
END;
$func$;
